# co_monitor

./: .gitignore  CHANGELOG.rst  LICENSE  README.md  plasma_coordinates.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
co_monitor/: __init__.py  __main__.py  main.py
co_monitor/emissivity/: fractional_abundance.py  kinetic_profiles.py  main.py  pec.py  reader.py
co_monitor/geometry/: _main_geometry.py  collimator.py  detector.py  dispersive_element.py  mesh_calculation.py  port.py  radiation_shield.py  reff_VMEC.py  rotation_matrix.py  simulation.py  visualization.py
input_files/geometry/: plotter.py
src/: PEC.py  __main__.py  _main_.py  fractional_abundance.py  fractional_abundance_backup.py  impurity_profiles.py  kinetic_profiles — kopia.py  kinetic_profiles.py  kinetic_profiles_corrected.py  new_pec_reader  new_pec_reader.py  pec.py  reader.py  reader_backup.py  reader_test.py  reader_testy.py
src/_geometry/: __main_helper.py  _main_geometry.py  collimator.py  collimator_OOP.py  collimator_OOP_BACKUP.py  coordinates.json  decorators.py  detector.py  detector_OOP.py  disp_.py  dispersive_element.py  dispersive_element_OOP.py  dispersive_element_OOP_back.py  generate_json.py  json_reader.py  krotsze  mesh_calculation.py  mesh_calculation_OOP.py  optics_coordinates_OOP.py  port.py  radiation_shield.py  radiation_shield_OOP.py  reff_calculation.py  reff_calculation_OOP.py  rotation_matrix.py  simulation.py  simulation_OOP.py  simulation_backup.py  test.py  (+2 more)
tests/: FA_STRAHL_reader.py  nr_of_plasma_points_with_given_reff.py  test_shutters_closing.py
(+605 files in other folders)
