 
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "co_monitor"
authors = [{name = "Tomasz Fornal", email = "tomasz.fornal6@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
description-file = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.5.1",
    "numpy>=1.22.2",
    "pandas>=1.4.0",
    "scipy>=1.8.0",
]

[project.optional-dependencies]
test = [
    "pytest>=6.2.5",
    "pre-commit>=2.17.0",
    "pytest-datadir",
]
deploy = [
    "flit>=3.5.1",
    ]

[tool.isort]
profile = "black"
